Últimas correções
